add java8 compatibility